about us page started

--- a/LESS/header.less
+++ b/LESS/header.less
@@ -6,3 +6,12 @@
 }
 
 // Nav
+nav{
+    padding: 20px 0;
+    a{
+        font-family: 'Permanent Marker', cursive;
+        color: @main-color;
+        text-decoration: none;
+        font-size: 2rem;
+    }
+}
