--- a/CSS/index.css
+++ b/CSS/index.css
@@ -136,6 +136,7 @@ html,
 body {
   font-family: 'Roboto', sans-serif;
   background-color: black;
+  height: 100%;
 }
 h1,
 h2,
@@ -144,11 +145,46 @@ h4,
 h5 {
   font-family: 'Faster One', cursive;
 }
+.container {
+  height: 100%;
+}
 #leon-logo {
   height: 150px;
   width: 100%;
 }
+nav {
+  padding: 20px 0;
+}
+nav a {
+  font-family: 'Permanent Marker', cursive;
+  color: #FFCC00;
+  text-decoration: none;
+  font-size: 2rem;
+}
+footer {
+  color: white;
+  margin: 100px 0 ;
+}
 .d-flex h1 {
   font-size: 10rem;
   color: white;
+  padding: 15px 0;
+}
+.d-flex p {
+  font-size: 2.5rem;
+  color: #FFCC00;
+  font-family: 'Monoton', cursive;
+  margin-bottom: 70px;
+}
+.d-flex input[type="name"] {
+  padding: 7px;
+  width: 300px;
+  border-radius: 10px;
+}
+.d-flex input[type="name"]:hover {
+  border-color: #FFCC00;
+}
+.d-flex input[type="submit"] {
+  height: 32.2px;
+  width: 75px;
 }
