--- a/LESS/global.less
+++ b/LESS/global.less
@@ -9,8 +9,13 @@
   html, body {
     font-family: 'Roboto', sans-serif;
     background-color: black;
+    height: 100%;
   }
   
   h1, h2, h3, h4, h5 {
     font-family: 'Faster One', cursive;
+  }
+
+  .container{
+      height: 100%;
   }
