updated aboutUs.html, started contact.html

--- a/less/global.less
+++ b/less/global.less
@@ -18,4 +18,10 @@
 
   .container{
       height: 100%;
+
+      h1{
+        font-size: 10rem;
+        color: white;
+        padding: 15px 0;
+      }
   }
