--- a/CSS/index.css
+++ b/CSS/index.css
@@ -148,6 +148,11 @@ h5 {
 .container {
   height: 100%;
 }
+.container h1 {
+  font-size: 10rem;
+  color: white;
+  padding: 15px 0;
+}
 #leon-logo {
   height: 150px;
   width: 100%;
@@ -187,4 +192,44 @@ footer {
 .d-flex input[type="submit"] {
   height: 32.2px;
   width: 75px;
+}
+.forgot {
+  font-family: 'Permanent Marker', cursive;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  text-transform: capitalize;
+  letter-spacing: 1.3px;
+  padding-top: 5px;
+  padding-right: 330px;
+  color: #FFCC00;
+}
+.forgot:hover {
+  text-decoration: none;
+  color: lightgray;
+}
+.mission h1 {
+  font-size: 10rem;
+}
+#statement {
+  font-family: 'Luckiest Guy', cursive;
+  font-size: 2.5rem;
+  line-height: 1.25;
+  color: #F75C03;
+  padding: 12px 0;
+}
+#team h1 {
+  font-size: 6rem;
+  text-align: center;
+}
+#form h2 {
+  font-size: 5rem;
+  color: lightgray;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.form-group textarea {
+  width: 700px;
 }
