--- a/less/home-page.less
+++ b/less/home-page.less
@@ -27,3 +27,26 @@
         width: 75px;
     }
 }
+
+.forgot{
+    font-family: 'Permanent Marker', cursive;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    text-transform: capitalize;
+    letter-spacing: 1.3px;
+    padding-top: 5px;
+    padding-right: 330px;
+    color: @main-color;
+
+    &:hover {
+        text-decoration: none;
+        color: lightgray;
+    }
+}
+
+.mission {
+    h1 {
+        font-size: 10rem;
+    }
+}
