--- a/CSS/index.css
+++ b/CSS/index.css
@@ -232,4 +232,41 @@ footer {
 }
 .form-group textarea {
   width: 700px;
+  height: 150px;
+  margin: 15px;
+}
+.form-group label {
+  color: white;
+  margin-left: 15px;
+  margin-top: 15px;
+  font-size: medium;
+}
+.form-group button {
+  margin-left: 15px;
+  height: 35px;
+  width: 100px;
+  font-size: medium;
+}
+.form-control {
+  margin-top: 30px;
+  padding: 17px;
+}
+.contact {
+  display: flex;
+}
+.contact .right-contact {
+  display: flex;
+  flex-direction: column;
+  height: 322px;
+}
+.contact .right-contact h3 {
+  color: white;
+  font-size: 2rem;
+}
+.contact .right-contact p {
+  color: white;
+  font-size: 1.5rem;
+}
+.contact .right-contact div {
+  padding: 20px 0;
 }
