--- a/CSS/index.css
+++ b/CSS/index.css
@@ -146,19 +146,43 @@ h5 {
   font-family: 'Faster One', cursive;
 }
 .container {
-  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  height: 100vh;
+  animation: slideShow 30s ease-in-out infinite;
+  background-size: cover;
 }
 .container h1 {
   font-size: 10rem;
   color: white;
   padding: 15px 0;
 }
+@keyframes slideShow {
+  0%,
+  100% {
+    background-image: url("/images/pullUps.jpg");
+  }
+  25% {
+    background-image: url("/images/dumbell.jpg");
+  }
+  50% {
+    background-image: url("/images/trainer.jpg");
+  }
+  85% {
+    background-image: url("/images/pullUps.jpg");
+  }
+}
 #leon-logo {
   height: 150px;
   width: 100%;
+  border-radius: 60px;
+}
+#leon-logo:hover {
+  opacity: 0.6;
 }
 nav {
   padding: 20px 0;
+  border-bottom: 2px solid lightgray;
 }
 nav a {
   font-family: 'Permanent Marker', cursive;
@@ -166,18 +190,46 @@ nav a {
   text-decoration: none;
   font-size: 2rem;
 }
+nav a:hover {
+  text-decoration: none;
+  font-size: 2.3rem;
+  color: #FFCC00;
+  font-weight: bold;
+}
 footer {
   color: white;
   margin: 100px 0 ;
 }
+#landing-page {
+  width: 100%;
+  margin: 0 auto;
+  height: 100vh;
+  animation: slideShow 30s ease-in-out infinite;
+  background-size: cover;
+}
+@keyframes slideShow {
+  0%,
+  100% {
+    background-image: url("/images/pullUps.jpg");
+  }
+  25% {
+    background-image: url("/images/dumbell.jpg");
+  }
+  50% {
+    background-image: url("/images/trainer.jpg");
+  }
+  85% {
+    background-image: url("/images/pullUps.jpg");
+  }
+}
 .d-flex h1 {
   font-size: 10rem;
-  color: white;
+  color: #FFCC00;
   padding: 15px 0;
 }
 .d-flex p {
   font-size: 2.5rem;
-  color: #FFCC00;
+  color: lightgray;
   font-family: 'Monoton', cursive;
   margin-bottom: 70px;
 }
@@ -222,7 +274,10 @@ footer {
   font-size: 6rem;
   text-align: center;
 }
-#form h2 {
+.card-title {
+  font-size: 1.4rem;
+}
+#header h2 {
   font-size: 5rem;
   color: lightgray;
 }
@@ -232,4 +287,10 @@ footer {
 }
 .form-group textarea {
   width: 700px;
+}
+section form {
+  margin: 15px 0;
+}
+#form {
+  display: flex;
 }
