--- a/LESS/contact.less
+++ b/LESS/contact.less
@@ -1,4 +1,4 @@
-#form{
+#header{
     h2{
         font-size: 5rem;
         color: lightgray;
@@ -14,4 +14,14 @@
     textarea{
         width: 700px;
     }
+}
+
+section{
+    form{
+        margin: 15px 0;
+    }
+}
+
+#form{
+    display: flex;
 }
