--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,14 +1,41 @@
+// Background w/ animations
+
+#landing-page{
+    width: 100%;
+    margin: 0 auto;
+    height: 100vh;
+    animation: slideShow 30s ease-in-out infinite;
+    background-size: cover;
+}
+
+@keyframes slideShow{
+    0%, 100%{
+      background-image: url("/images/pullUps.jpg")
+    }
+    25%{
+      background-image: url("/images/dumbell.jpg")
+    }
+    50%{
+      background-image: url("/images/trainer.jpg")
+    }
+    85%{
+      background-image: url("/images/pullUps.jpg")
+    }
+}
+
 // Main content 
 .d-flex{
     h1{
         font-size: 10rem;
-        color: white;
+        color: @main-color;
+        // color: lightgray;
         padding: 15px 0;
     }
 
     p{
         font-size: 2.5rem;
-        color: @main-color;
+        color: lightgray;
+        // color: @main-color;
         font-family: 'Monoton', cursive;
         margin-bottom: 70px;
     }
