--- a/LESS/contact.less
+++ b/LESS/contact.less
@@ -1,4 +1,18 @@
 #header{
+    margin-top: 20px;
+    span{
+        color: @main-color;
+    }
+
+    h2{
+        font-size: 5rem;
+        color: white;
+        margin: 25px 0;
+    }
+}
+
+
+#form{
     h2{
         font-size: 5rem;
         color: lightgray;
@@ -11,17 +25,63 @@
 }
 
 .form-group{
+    flex-grow: 2;
+
     textarea{
-        width: 700px;
+        width: 59rem;
+        height: 150px;
+        margin: 15px;
+    }
+
+    label{
+        color:white;
+        margin-left: 15px;
+        margin-top: 15px;
+        font-size: medium;
+    }
+
+    button {
+        margin-left: 15px;
+        height: 35px;
+        width: 100px;
+        font-size: medium;
     }
 }
 
-section{
-    form{
-        margin: 15px 0;
-    }
+.form-control {
+    margin-top: 30px;
+    padding: 17px;
+    
 }
 
-#form{
+.contact {
     display: flex;
+    justify-content: space-evenly;
+    background-color: rgba(211,211,211 ,0.37 );
+    border-radius: 5px;
+
+    .right-contact{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: 200px;
+
+        h3{
+            color:white;
+            font-size: 2rem;
+        }
+        p{
+            color: white;
+            font-size: 1.5rem;
+        }
+        div{
+            padding: 20px 0;
+        }
+
+        i{
+            height: 20px;
+        }
+        
+    }
+
 }
