--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,9 @@
 
 // Color Scheme
 @main-color: #FFCC00;
+@secondary-color: black;
+@counter-color: lightgray;
 
 // Responsiveness Escaping
 @mobile: ~'(max-width: 500px)';
-@tablet: ~'(min-width: 768px)';
+@tablet: ~'(max-width: 800px)';
