--- a/CSS/index.css
+++ b/CSS/index.css
@@ -203,11 +203,22 @@ footer {
   color: #FFCC00;
   padding: 15px 0;
 }
+@media (max-width: 500px) {
+  .d-flex h1 {
+    font-size: 8rem;
+  }
+}
 .d-flex p {
   font-size: 2.5rem;
   color: lightgray;
   font-family: 'Monoton', cursive;
   margin-bottom: 70px;
+}
+@media (max-width: 500px) {
+  .d-flex form {
+    display: flex;
+    flex-direction: column;
+  }
 }
 .d-flex input[type="name"] {
   padding: 7px;
@@ -220,6 +231,11 @@ footer {
 .d-flex input[type="submit"] {
   height: 32.2px;
   width: 75px;
+}
+@media (max-width: 500px) {
+  .d-flex input[type="submit"] {
+    width: 100%;
+  }
 }
 .forgot {
   font-family: 'Permanent Marker', cursive;
@@ -236,22 +252,63 @@ footer {
   text-decoration: none;
   color: lightgray;
 }
+@media (max-width: 500px) {
+  .forgot {
+    padding-right: 0;
+  }
+}
 .mission h1 {
   font-size: 10rem;
 }
 #statement {
   font-family: 'Luckiest Guy', cursive;
-  font-size: 2.5rem;
-  line-height: 1.25;
+  font-size: 1.75rem;
+  line-height: 1.5;
   color: #F75C03;
-  padding: 12px 0;
+  margin: 2px 0px;
+  padding: 16px 10px;
+  border-bottom: 5px groove #FFCC00;
+}
+.mission h1 {
+  font-size: 4rem;
+  color: lightgray;
+}
+@media (max-width: 500px) {
+  .mission h1 {
+    text-align: center;
+    padding-top: 5px;
+  }
 }
 #team h1 {
-  font-size: 6rem;
+  font-size: 4rem;
   text-align: center;
+  padding: 20px 0;
+  color: lightgray;
+}
+@media (max-width: 500px) {
+  .card {
+    width: auto !important;
+  }
+}
+.card-name {
+  text-align: center;
+  font-size: 2rem;
+}
+.card-body {
+  background-color: lightgray;
+}
+.card-body p {
+  padding: 20px;
+  font-size: 1.2rem;
+  line-height: 1.4;
 }
 .card-title {
   font-size: 1.4rem;
+  text-align: center;
+}
+.icons {
+  display: flex;
+  justify-content: space-evenly;
 }
 #header {
   margin-top: 20px;
@@ -272,17 +329,33 @@ footer {
   display: flex;
   flex-wrap: wrap;
 }
+@media (max-width: 500px) {
+  .row {
+    flex-direction: column;
+  }
+}
+@media (max-width: 800px) {
+  .row {
+    flex-direction: column;
+  }
+}
 .form-group {
   flex-grow: 2;
 }
 .form-group textarea {
-
   width: 59rem;
-
- 
-
   height: 150px;
   margin: 15px;
+}
+@media (max-width: 500px) {
+  .form-group textarea {
+    width: 95%;
+  }
+}
+@media (max-width: 800px) {
+  .form-group textarea {
+    width: 95%;
+  }
 }
 .form-group label {
   color: white;
@@ -302,22 +375,25 @@ footer {
 }
 .contact {
   display: flex;
-
   justify-content: space-evenly;
   background-color: rgba(211, 211, 211, 0.37);
   border-radius: 5px;
-
-
+}
+@media (max-width: 500px) {
+  .contact {
+    flex-direction: column-reverse;
+  }
+}
+@media (max-width: 800px) {
+  .contact {
+    flex-direction: column-reverse;
+  }
 }
 .contact .right-contact {
   display: flex;
   flex-direction: column;
-
   justify-content: space-evenly;
   height: 200px;
-
- 
-
 }
 .contact .right-contact h3 {
   color: white;
@@ -328,11 +404,11 @@ footer {
   font-size: 1.5rem;
 }
 .contact .right-contact div {
+  display: flex;
+  justify-content: space-evenly;
   padding: 20px 0;
-
 }
 .contact .right-contact i {
   height: 20px;
-
-
+  color: lightgray;
 }
