Finshed up touches to Build week project site.

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -30,7 +30,11 @@
         color: @main-color;
         // color: lightgray;
         padding: 15px 0;
-    }
+
+        @media @mobile {
+            font-size: 8rem;
+        }
+     }
 
     p{
         font-size: 2.5rem;
@@ -38,6 +42,15 @@
         // color: @main-color;
         font-family: 'Monoton', cursive;
         margin-bottom: 70px;
+
+    }
+
+    form{
+        @media @mobile{
+            display: flex;
+            flex-direction: column;
+
+        }
     }
 
     input[type="name"]{
@@ -52,6 +65,10 @@
     input[type="submit"]{
         height: 32.2px;
         width: 75px;
+
+        @media @mobile{
+            width: 100%;
+        }
     }
 }
 
@@ -69,6 +86,10 @@
     &:hover {
         text-decoration: none;
         color: lightgray;
+    }
+
+    @media @mobile{
+        padding-right: 0;
     }
 }
 
