--- a/CSS/index.css
+++ b/CSS/index.css
@@ -321,6 +321,16 @@ footer {
   color: white;
   margin: 25px 0;
 }
+@media (max-width: 500px) {
+  #header h2 {
+    text-align: center;
+  }
+}
+@media (max-width: 800px) {
+  #header h2 {
+    text-align: center;
+  }
+}
 #form h2 {
   font-size: 5rem;
   color: lightgray;
@@ -394,6 +404,16 @@ footer {
   flex-direction: column;
   justify-content: space-evenly;
   height: 200px;
+}
+@media (max-width: 500px) {
+  .contact .right-contact {
+    text-align: center;
+  }
+}
+@media (max-width: 800px) {
+  .contact .right-contact {
+    text-align: center;
+  }
 }
 .contact .right-contact h3 {
   color: white;
