--- a/less/contact.less
+++ b/less/contact.less
@@ -8,6 +8,14 @@
         font-size: 5rem;
         color: white;
         margin: 25px 0;
+
+        @media @mobile{
+            text-align: center;
+        }
+
+        @media @tablet{
+            text-align: center;
+        }
     }
 }
 
@@ -89,6 +97,14 @@
         flex-direction: column;
         justify-content: space-evenly;
         height: 200px;
+
+        @media @mobile {
+            text-align: center;
+        }
+
+        @media @tablet {
+            text-align: center;
+        }
 
         h3{
             color:white;
