--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,16 +10,16 @@
 
 @keyframes slideShow{
     0%, 100%{
-      background-image: url("/images/pullUps.jpg")
+      background-image: url("images/pullUps.jpg")
     }
     25%{
-      background-image: url("/images/dumbell.jpg")
+      background-image: url("images/dumbell.jpg")
     }
     50%{
-      background-image: url("/images/trainer.jpg")
+      background-image: url("images/trainer.jpg")
     }
     85%{
-      background-image: url("/images/pullUps.jpg")
+      background-image: url("images/pullUps.jpg")
     }
 }
 
